# robot_ws

./: .gitignore  compile_commands.json  frames_2026-02-09_20.34.09.gv  frames_2026-02-19_17.41.00.gv  frames_2026-02-25_01.17.56.gv  my_mobile_robot.gv
ekf_evaluation_bag/: metadata.yaml
ekf_evaluation_bag1/: metadata.yaml
imu_static_test/: metadata.yaml
python/: 35day copy.py  35day.py  41day.py  57day.py  57day_2.py  57day_3.py  58day.py  59day.py  60day.py  72day.py
src/my_robot_control/: package.xml  setup.py
src/my_robot_control/config/: ekf.yaml  twist_mux.yaml
src/my_robot_control/launch/: teleop.launch.py
src/my_robot_control/my_robot_control/: e_stop_node.py  ekf_core.py  ekf_ros_node.py  figure8_challenge.py  figure8_path.py  path_generator.py  path_publisher_node.py  pure_pursuit.py  pure_pursuit_node.py  safety_layer_node.py  test_driver.py
src/my_robot_control/my_robot_control/python/: heading_control_node.py  heading_controller.py  motor_controller.py  pid_controller.py  test_pure_pursuit.py  tune_pure_pursuit.py
src/my_robot_control/test/: test_ekf.py  test_ekf_unit.py
src/my_robot_description/: package.xml  setup.cfg  setup.py
src/my_robot_description/launch/: display.launch.py  ekf.launch.py  gazebo.launch.py  gazebo_full_sensors.launch.py  pure_pursuit.launch.py  robot_localization.launch.py
src/my_robot_description/meshes/: base_link.stl  camera.stl.stl  left_wheel.stl.stl  lidar.stl.stl  right_wheel.stl.stl
src/my_robot_description/my_robot_description/: odom_publisher_example.py  static_tf_broadcaster_example.py  tf_listener_example.py  tuning_test.py
src/my_robot_description/rviz/: ekf.rviz  full_sensors.rviz  robot_view.rviz
src/my_robot_description/urdf/: my_robot.urdf  my_robot.urdf.xacro  robot_base.xacro  robot_gazebo.xacro  robot_properties.xacro  robot_sensors.xacro  robot_wheels.xacro
src/my_robot_description/worlds/: my_world.world  test_room.world
src/my_robot_odometry/: package.xml  setup.cfg  setup.py
src/my_robot_odometry/my_robot_odometry/: analyze_sensor_noise.py  ekf_evaluator copy.py  ekf_evaluator.py  imu_processor_node.py  nis_monitor.py  odom_evaluator.py  odom_evaluator_three.py  odom_evaluator_two.py  odom_publisher_example.py  path_evaluator_node.py
src/my_robot_odometry/my_robot_odometry/python/: allan_variance.py  analyze_sensor_noise.py  ekf_evaluator.py  offline_evaluator.py
src/my_robot_odometry_cpp/: CMakeLists.txt  package.xml
src/my_robot_odometry_cpp/include/my_gazebo_plugins/: velocity_limiter.hpp
src/my_robot_odometry_cpp/include/my_robot_odometry_cpp/: differential_drive_odometry.hpp  odometry_node.hpp
src/my_robot_odometry_cpp/src/: differential_drive_odometry.cpp  main.cpp  odometry_node.cpp  velocity_limiter.cpp
src/my_robot_odometry_cpp/test/: test_odometry.cpp
src/my_robot_perception/: package.xml  setup.py
src/my_robot_perception/config/: robot_localization ekf.yaml
src/my_robot_perception/my_robot_perception/: allan_variance.py  depth_converter_node.py  depth_processor_node.py  imu_processor_node.py  laser_scan_analyzer.py  lidar_processor_node.py  nis_monitor.py
static_test/: metadata.yaml
tf_tree/: frames_2026-02-25_01.45.09.gv  my_mobile_robot.gv
