<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
  역할:
    1. 패키지 이름, 버전, 설명, 저자 정보
    2. 의존성 선언 (이 패키지가 뭘 필요로 하는지)
    3. colcon build 시 의존성 자동 해결
-->

<!-- format="3": 최신 패키지 포맷 (ROS 2 표준) -->    
<package format="3">
  <!-- 패키지 이름: 디렉토리 이름과 반드시 일치 (ros2 pkg create 할 때 지정한 이름) -->
  <name>my_robot_description</name>
  <!-- 0.1.0 = 첫 번째 개발 버전 -->
  <version>0.1.0</version>
  
  <description>
    URDF/Xacro description and meshes for the mobile robot.
    Includes launch files for RViz visualization.
  </description>
  
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>



  <!-- 빌드 시스템 의존성 -->

  <!-- 빌드 도구: ament_python - colcon build가 이 패키지를 Python 방식으로 빌드 -->
  <buildtool_depend>ament_python</buildtool_depend>
  


  <!-- 실행 시 의존성 (exec_depend) -->
  <!-- exec_depend = "이 패키지를 실행할 때 필요한 다른 패키지" → colcon build 후 실행 시 해당 패키지가 있어야 함 (각 의존성이 왜 필요한지 설명) -->
  
  <!-- ROS 2 Python 클라이언트 라이브러리 → Launch 파일에서 ROS 2 기능 사용 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <!--
    URDF를 읽고 TF를 브로드캐스트하는 노드 → ⭐ 로봇 시각화의 핵심
      → /robot_description 파라미터로 URDF 전달
      → joint_states를 받아서 각 Link의 TF 계산 + 발행
  -->
  <exec_depend>joint_state_publisher</exec_depend>
  <!--
    fixed가 아닌 Joint의 상태를 발행하는 노드
      → 바퀴의 회전 각도 등
      → Gazebo 연동 시에는 Gazebo가 대신 발행하므로 불필요 → RViz 단독 테스트 시에만 사용
  -->
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <!--
    joint_state_publisher의 GUI 버전
      → 슬라이더로 각 Joint를 수동 조작!
      → 바퀴 회전, 팔 관절 움직임을 시각적으로 테스트
  -->
  <exec_depend>xacro</exec_depend>
  <!--
    Xacro → URDF 변환 도구
      → Launch 파일에서 런타임에 변환
      → .urdf.xacro 파일을 순수 .urdf로 펼침
  -->
  <exec_depend>rviz2</exec_depend>
  <!--
    ROS 2 시각화 도구 → TF, 로봇 모델, 센서 데이터 등을 3D로 표시
  -->
  <exec_depend>urdf</exec_depend>
  <!--
    URDF 파서 라이브러리 → robot_state_publisher가 URDF를 파싱할 때 사용
  -->


  <exec_depend>gazebo_ros</exec_depend> 



  <!-- 테스트 의존성 (선택) -->
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>
